added logo and social links focus styles

--- a/web-component/header.css
+++ b/web-component/header.css
@@ -25,7 +25,13 @@
 .avatar {
 	color: var(--main-color);
 	display: block;
+	border-radius: 50%;
 }	
+
+.avatar:focus {
+	outline: 2px dashed;
+	outline-offset: 2px;
+}
 
 .avatar__image {
 	display: block;
@@ -78,6 +84,11 @@
 
 .header__social-link {
 	color: var(--main-color);
+}
+
+.header__social-link:focus {
+	outline: 2px dashed;
+	outline-offset: 2px;
 }
 
 .header__social-logo {
